# Exotic_option_pricing

./: .gitignore  README.md  pyproject.toml
exotics/: engine.py  greeks.py  utils.py
notebooks/: 01_digital_pricing.ipynb  02_greek_dynamics.ipynb  03_double_digital_smile.ipynb
