[project]
name = "exotic_pricing"
version = "0.1.0"
description = "Exotic Option pricing & Risk Analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "scipy",
    "plotly",
    "nbformat>=5.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exotics"]
